# FlopPITy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-pypi.yml  python-app.yml
docs/: detailed_guide.md
examples/: ARCiS_binary_retrieval.ipynb  ARCiS_retrieval.ipynb  ARCiS_retrieval.py  Example.ipynb  Example_ARCiS.ipynb  debug_sbi_data.ipynb  ensemble.ipynb  plot_retrieval_results.ipynb  plot_retrieval_results.py
examples/output_FlopPITy/: data_0.pkl  retrieval.pkl  retrieval_setup.json
src/FlopPITy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/floppity/: __init__.py  flappity.py  helpers.py  output.py  plot_utils.py  postprocessing.py  preprocessing.py  simulators.py  version.py
src/floppity/data/: obs_1  obs_2  obs_3  obs_RV_1.txt  obs_RV_2.txt  obs_simple.txt
tests/: test_core.py
