[build-system]
requires = ["setuptools>=75", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "FlopPITy"
dynamic = ["version"]
description = "normalising Flow exoPlanet Parameter Inference Toolkyt"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Francisco Ardevol Martinez", email = "68873290+franciscoardevolmartinez@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "sbi",
    "subprocess",
    "corner",
    "multiprocessing",
    "cloudpickle"
]

[tool.setuptools_scm]
write_to = "src/floppity/version.py"
